styles/globals.css
/* ... */
:is(main, .polaroid .outer) .image {
    background-color: var(--offwhite);
    margin-top: 0.5rem;
    flex-grow: 2;
    width: 100%;
}

:is(main, .polaroid .outer) .image::after {
    content: '';
    position: absolute;
    bottom: calc(0px - var(--padding_polaroid));
    left: calc(0px - var(--padding_polaroid));
    width: calc(100% + var(--padding_polaroid) * 2);
    height: var(--padding_polaroid);
    mix-blend-mode: darken;
    background: linear-gradient(
            90deg,
            var(--white) 0%,
            transparent 50%,
            var(--white) 100%
        ),
        linear-gradient(0deg, rgba(0, 0, 0, 0.08) 0%, transparent 70%);
}

:is(main, .polaroid .outer) .image::before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    box-shadow: inset 5px 5px 7px -4px rgba(0, 0, 0, 0.07),
        inset -1px -1px 0.5px 0px rgba(0, 0, 0, 0.1);
}

:is(main, .polaroid .outer) .description {
    height: var(--frame_description_h);
    display: flex;
}

:is(main, .polaroid .outer) .description .left {
    flex-grow: 1;
}

/* Nav */
nav {
    position: fixed;
    z-index: 10;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    pointer-events: none;
    background-color: transparent;
    transition: background-color 1s;
}

nav .wrapper {
    display: flex;
    transform: translate3D(
        calc(
            0px - var(--nav_column_width) * var(--nav_current) +
                var(--nav_left_offset)
        ),
        0,
        0
    );
    will-change: transform;
    transition: transform 0.5s;
    height: 100%;
    width: fit-content;
}

nav .column {
    transition: opacity 1s;
    opacity: 0;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    width: var(--nav_column_width);
    scrollbar-color: rgba(255, 255, 255, 0.7) transparent;
}

nav .flexcolumn {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    transform: translate3D(0, var(--nav_top_offset), 0);
    will-change: transform;
}

nav .flexcolumn > * {
    top: calc(0px - var(--nav_gap));
    /* top: calc(0px - var(--nav_gap) - var(--nav_gap_offset)); */
}
nav .flexcolumn > * .nested {
    /* top: calc(0px - var(--nav_gap_offset)); */
}

nav .polaroid {
    position: relative;
    height: calc(var(--nav_gap) - var(--nav_gap_offset));
    transition: top 0.5s, height 0.5s;
}

nav .polaroid .outer {
    height: fit-content;
    width: var(--nav_frame_width);
    aspect-ratio: 3.5/4.2;
    position: relative;
    transform-origin: bottom right;
}

nav .polaroid .outer:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    transform-origin: bottom right;
}

nav .nested {
    position: relative;
    transition: top 0.5s, left 0.5s;
}

nav .nested > :first-child {
    cursor: pointer;
}

nav .extraspace .outer {
    visibility: hidden;
    height: calc(var(--nav_frame_width) * 2);
}

nav .image {
    aspect-ratio: 1/1;
    text-align: center;
    line-height: 1.15rem;
    flex-grow: 0 !important;
}

nav .image .imagecontent {
    opacity: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 0.8rem;
}

nav.timeline .image .imagecontent {
    opacity: 1;
}

nav .image .message {
    font-weight: 500;
}

nav .image .committer {
    font-style: italic;
    margin-top: 0.5rem;
}

/* info */
nav .info {
    width: var(--nav_frame_width);
    margin: var(--timeline_nav_p) 0 2rem 0;
    text-align: center;
    overflow: visible;
}

nav .current .info {
    max-height: var(--nav_top_offset_original);
}

nav.timeline .info {
    max-height: unset;
}

nav .info .date {
    font-size: 0.85rem;
    display: grid;
    width: 100%;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    text-align: left;
    gap: 0.3rem;
    padding: 0 var(--padding_polaroid);
    margin-top: 2rem;
}

nav .info .details {
    grid-column: 1/3;
    display: flex;
    justify-content: space-between;
}

nav .info .details .changed {
    color: var(--lightblue);
}
nav .info .details .additions {
    color: var(--lightgreen);
}
nav .info .details .deletions {
    color: var(--lightred);
}

nav .info .date > :nth-child(even) {
    text-align: right;
}

nav .info .date > * {
    overflow: hidden;
    text-overflow: ellipsis;
}

nav .info .message {
    width: 100%;
    cursor: pointer;
    margin-top: 2rem;
}

nav .info .message.short {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

nav .info .committer {
    max-width: 10rem;
    font-style: italic;
    margin: 0 auto;
    margin-top: 1rem;
}

nav .info * {
    color: var(--white);
}

nav .indicator {
    color: black;
    font-weight: 500;
    opacity: 0.3;
    width: fit-content;
    height: fit-content;
    padding: 0.9rem 1.6rem;
    border-radius: 0.3rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
}

nav .indicator .time {
    color: black;
    font-style: italic;
    line-height: 1.2rem;
    font-weight: 300;
}

nav .column.latest .indicator .time::after {
    content: ' (latest)';
}

nav .indicator .fulldate {
    color: black;
    font-size: 1.5rem;
}

nav .column.latest .indicator {
    background-color: var(--lightyellow);
}

@media (hover: hover) and (pointer: fine) {
    nav .polaroid .outer:hover {
        transform: rotate(-20deg);
    }

    nav .polaroid .outer:hover:before {
        transform: rotate(20deg);
    }
}
/* ... */

